modyfing model to expected kaggle script

--- a/create_dataset.ipynb
+++ b/create_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -42,11 +42,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading...\n",
+      "----- LOAD train_merged-part1\n",
+      "----- LOAD train_merged-part2\n",
+      "----- LOAD test_merged\n",
+      "DONE\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Loading...\")\n",
     "print(\"----- LOAD train_merged-part1\")\n",
@@ -66,87 +78,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['attrsJSON_1', 'attrsJSON_2', 'categoryID_1', 'categoryID_2',\n",
-       "       'description_1', 'description_2', 'generationMethod', 'id',\n",
-       "       'images_array_1', 'images_array_2', 'isDuplicate', 'itemID_1',\n",
-       "       'itemID_2', 'lat_1', 'lat_2', 'locationID_1', 'locationID_2', 'lon_1',\n",
-       "       'lon_2', 'metroID_1', 'metroID_2', 'parentCategoryID_1',\n",
-       "       'parentCategoryID_2', 'price_1', 'price_2', 'regionID_1', 'regionID_2',\n",
-       "       'title_1', 'title_2'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd_data.columns"
+    "pd_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "id                         0\n",
-       "itemID_1                   0\n",
-       "itemID_2                   0\n",
-       "categoryID_1               0\n",
-       "title_1                    2\n",
-       "description_1             25\n",
-       "images_array_1        117733\n",
-       "attrsJSON_1            38490\n",
-       "price_1               129371\n",
-       "locationID_1               0\n",
-       "metroID_1             740808\n",
-       "lat_1                      0\n",
-       "lon_1                      0\n",
-       "parentCategoryID_1         0\n",
-       "regionID_1                 0\n",
-       "categoryID_2               0\n",
-       "title_2                    0\n",
-       "description_2             24\n",
-       "images_array_2        117974\n",
-       "attrsJSON_2            38490\n",
-       "price_2               129700\n",
-       "locationID_2               0\n",
-       "metroID_2             740115\n",
-       "lat_2                      0\n",
-       "lon_2                      0\n",
-       "parentCategoryID_2         0\n",
-       "regionID_2                 0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Replacing NaN\n"
+     ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
    "source": [
     "print(\"Replacing NaN\")\n",
     "pd_data['title_1'].fillna(\"\", inplace=True)\n",
@@ -161,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -173,9 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -184,20 +148,30 @@
     "pd_features['title_dlevenshtein'] = pd.read_hdf(FOLDER + \"feat_train_title_demarauleven.h\")\n",
     "pd_features['title_jarowinkler'] = pd.read_hdf(FOLDER + \"feat_train_title_jarowinkler.h\")\n",
     "pd_features['title_num_same'] = pd.read_hdf(FOLDER + \"feat_train_title_num_same.h\")\n",
+    "pd_features['title_1_len'] = pd_data['title_1'].str.len()\n",
+    "pd_features['title_2_len'] = pd_data['title_2'].str.len()\n",
     "\n",
     "# description\n",
     "pd_features['description_diff_len'] = np.abs(pd_data['description_2'].apply(len) - pd_data['description_1'].apply(len))\n",
     "pd_features['description_dlevenshtein'] = pd.read_hdf(FOLDER + \"feat_train_description_demarauleven.h\")\n",
     "pd_features['description_jarowinkler'] = pd.read_hdf(FOLDER + \"feat_train_description_jarowinkler.h\")\n",
+    "pd_features['description_1_len'] = pd_data['description_1'].str.len()\n",
+    "pd_features['description_2_len'] = pd_data['description_2'].str.len()\n",
+    "\n",
     "\n",
     "# price\n",
+    "pd_features['price_same'] = 1 * (pd_data['price_1'] == pd_data['price_2'])\n",
     "pd_features['price_diff'] = np.abs(pd_data['price_1']-pd_data['price_2'])*1./(np.abs(pd_data['price_1']) + np.abs(pd_data['price_2']))\n",
     "pd_features['price_diff'].fillna(-9999, inplace=True)\n",
+    "\n",
     "\n",
     "# attrJson\n",
     "pd_features['attrsJSON_diff_len'] = np.abs(pd_data['attrsJSON_1'].apply(len) - pd_data['attrsJSON_2'].apply(len))\n",
     "pd_features['attrsJSON_dlevenshtein'] = pd.read_hdf(FOLDER + \"feat_train_attrsJSON_demarauleven.h\")\n",
     "pd_features['attrsJSON_jarowinkler'] = pd.read_hdf(FOLDER + \"feat_train_attrsJSON_jarowinkler.h\")\n",
+    "pd_features['attrsJSON_1_len'] = pd_data['attrsJSON_1'].str.len()\n",
+    "pd_features['attrsJSON_2_len'] = pd_data['attrsJSON_2'].str.len()\n",
+    "\n",
     "\n",
     "# images_array\n",
     "pd_features['images_diff_number'] = np.abs(pd_data['images_array_1'].apply(lambda x: len(x.split(',')))-pd_data['images_array_2'].apply(lambda x: len(x.split(','))))\n",
@@ -218,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -235,13 +209,20 @@
        "      <th>title_dlevenshtein</th>\n",
        "      <th>title_jarowinkler</th>\n",
        "      <th>title_num_same</th>\n",
+       "      <th>title_1_len</th>\n",
+       "      <th>title_2_len</th>\n",
        "      <th>description_diff_len</th>\n",
        "      <th>description_dlevenshtein</th>\n",
        "      <th>description_jarowinkler</th>\n",
+       "      <th>description_1_len</th>\n",
+       "      <th>description_2_len</th>\n",
+       "      <th>price_same</th>\n",
        "      <th>price_diff</th>\n",
        "      <th>attrsJSON_diff_len</th>\n",
        "      <th>attrsJSON_dlevenshtein</th>\n",
        "      <th>attrsJSON_jarowinkler</th>\n",
+       "      <th>attrsJSON_1_len</th>\n",
+       "      <th>attrsJSON_2_len</th>\n",
        "      <th>images_diff_number</th>\n",
        "      <th>metroID_same</th>\n",
        "      <th>locationID_same</th>\n",
@@ -259,13 +240,20 @@
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>27</td>\n",
+       "      <td>27</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -281,13 +269,20 @@
        "      <td>0.666667</td>\n",
        "      <td>0.396825</td>\n",
        "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "      <td>8</td>\n",
        "      <td>116</td>\n",
        "      <td>0.666667</td>\n",
        "      <td>0.396825</td>\n",
+       "      <td>164</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.200000</td>\n",
        "      <td>0</td>\n",
        "      <td>0.666667</td>\n",
        "      <td>0.396825</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -303,13 +298,20 @@
        "      <td>0.695652</td>\n",
        "      <td>0.390700</td>\n",
        "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>23</td>\n",
        "      <td>11</td>\n",
        "      <td>0.695652</td>\n",
        "      <td>0.390700</td>\n",
+       "      <td>48</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.090909</td>\n",
        "      <td>0</td>\n",
        "      <td>0.695652</td>\n",
        "      <td>0.390700</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -325,13 +327,20 @@
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>27</td>\n",
        "      <td>204</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>107</td>\n",
+       "      <td>311</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.068826</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>359</td>\n",
+       "      <td>359</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -347,13 +356,20 @@
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>27</td>\n",
        "      <td>91</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>311</td>\n",
+       "      <td>220</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.068826</td>\n",
        "      <td>717</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>359</td>\n",
+       "      <td>1076</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -375,12 +391,19 @@
        "3               0            0.000000           1.000000               1   \n",
        "4               0            0.000000           1.000000               1   \n",
        "\n",
-       "   description_diff_len  description_dlevenshtein  description_jarowinkler  \\\n",
-       "0                     0                  0.000000                 1.000000   \n",
-       "1                   116                  0.666667                 0.396825   \n",
-       "2                    11                  0.695652                 0.390700   \n",
-       "3                   204                  0.000000                 1.000000   \n",
-       "4                    91                  0.000000                 1.000000   \n",
+       "   title_1_len  title_2_len  description_diff_len  description_dlevenshtein  \\\n",
+       "0           17           17                     0                  0.000000   \n",
+       "1           21            8                   116                  0.666667   \n",
+       "2            8           23                    11                  0.695652   \n",
+       "3           27           27                   204                  0.000000   \n",
+       "4           27           27                    91                  0.000000   \n",
+       "\n",
+       "   description_jarowinkler  description_1_len  description_2_len  price_same  \\\n",
+       "0                 1.000000                 25                 25           1   \n",
+       "1                 0.396825                164                 48           0   \n",
+       "2                 0.390700                 48                 37           0   \n",
+       "3                 1.000000                107                311           0   \n",
+       "4                 1.000000                311                220           0   \n",
        "\n",
        "   price_diff  attrsJSON_diff_len  attrsJSON_dlevenshtein  \\\n",
        "0    0.000000                   0                0.000000   \n",
@@ -389,22 +412,29 @@
        "3    0.068826                   0                0.000000   \n",
        "4    0.068826                 717                0.000000   \n",
        "\n",
-       "   attrsJSON_jarowinkler  images_diff_number  metroID_same  locationID_same  \\\n",
-       "0               1.000000                   1             0                1   \n",
-       "1               0.396825                   1             0                1   \n",
-       "2               0.390700                   1             0                1   \n",
-       "3               1.000000                   5             0                1   \n",
-       "4               1.000000                   6             0                1   \n",
+       "   attrsJSON_jarowinkler  attrsJSON_1_len  attrsJSON_2_len  \\\n",
+       "0               1.000000               27               27   \n",
+       "1               0.396825               35               35   \n",
+       "2               0.390700               35               35   \n",
+       "3               1.000000              359              359   \n",
+       "4               1.000000              359             1076   \n",
        "\n",
-       "   regionID_same  haversine  categoryID_same  isDuplicate  id  \n",
-       "0              1  -0.205083                1          1.0 NaN  \n",
-       "1              1  -0.205083                1          0.0 NaN  \n",
-       "2              1  -0.205083                1          0.0 NaN  \n",
-       "3              1  -0.205083                1          1.0 NaN  \n",
-       "4              1  -0.205083                1          1.0 NaN  "
+       "   images_diff_number  metroID_same  locationID_same  regionID_same  \\\n",
+       "0                   1             0                1              1   \n",
+       "1                   1             0                1              1   \n",
+       "2                   1             0                1              1   \n",
+       "3                   5             0                1              1   \n",
+       "4                   6             0                1              1   \n",
+       "\n",
+       "   haversine  categoryID_same  isDuplicate  id  \n",
+       "0  -0.205083                1          1.0 NaN  \n",
+       "1  -0.205083                1          0.0 NaN  \n",
+       "2  -0.205083                1          0.0 NaN  \n",
+       "3  -0.205083                1          1.0 NaN  \n",
+       "4  -0.205083                1          1.0 NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,35 +445,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4035592, 19)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd_features.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "pd_features.to_hdf(\"D1_20may.p\", 'w')"
+    "pd_features.to_hdf(\"D1_23may.p\", 'w')"
    ]
   }
  ],
