New preprocessing and dumy feature generator

--- a/preprocessing_description.ipynb
+++ b/preprocessing_description.ipynb
@@ -628,30 +628,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LOAD test\n",
-      "preprocessing text\n",
-      "(1315205, 2)\n",
-      "processed docs  0\n",
-      "processed docs  10000\n",
-      "processed docs  20000\n",
-      "processed docs  30000\n",
-      "processed docs  40000\n",
-      "processed docs  50000\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "print('LOAD test')\n",
+    "### print('LOAD test')\n",
     "pd_itemInfo_test = pd.read_hdf(\"ItemInfo_test_description.h\")\n",
     "pd_itemInfo_test['description'].fillna(\"\", inplace=True)\n",
     "\n",
